Login and signup functionality is added

--- a/Android Application/app/src/main/res/values-ur-rPK/strings.xml
+++ b/Android Application/app/src/main/res/values-ur-rPK/strings.xml
@@ -10,7 +10,7 @@
     <string name="ec_8.1_16">صرف وہی فصلیں اگائی جا سکتی ہیں جو نمکین ماحول کو برداشت کر سکیں</string>
     <string name="ec_16">اس زمین پر زیادہ تر فصلیں اگانا ناممکن ہے۔</string>
     <string name="om_0.86">نامیاتی مادے میں مٹی کمزور ہے۔</string>
-    <string name="om_0.87_1.29">Soil is good in organic matter</string>
+    <string name="om_0.87_1.29">مٹی نامیاتی مادے میں اچھی ہے۔</string>
     <string name="om_1.29">مٹی نامیاتی مادے میں بہت اچھی ہے۔</string>
     <string name="p_3.5">فصلوں کی بہتر پیداوار کے لیے فاسفورس کھاد کی زیادہ مقدار کی ضرورت ہوتی ہے۔</string>
     <string name="p_3.6_7">مٹی فاسفورس غذائیت کے لحاظ سے کمزور ہے اس لیے فصل کی بہترین پیداوار کے لیے فاسفورس کھاد کی ضرورت ہوتی ہے۔</string>
