--- a/Android Application/app/src/main/res/values-ur-rPK/strings.xml
+++ b/Android Application/app/src/main/res/values-ur-rPK/strings.xml
@@ -75,4 +75,5 @@
     <string name="k">پوٹاشیم</string>
     <string name="show">دکھائیں</string>
     <string name="savedValues">محفوظ شدہ ریکارڈز</string>
+    <string name="search">تلاش کے لیے نمونہ آئی ڈی درج کریں</string>
 </resources>
